--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,6 +39,7 @@
     <div class="c-Sticky">
         <div class="Header animated fadeInUp">头部</div>
         <div class="c-Sticky-bd">
+            <div style="width: 100px;height:100px;" class="a">aaa</div>
             <!--轮播-->
             <div class="c-Carousel">
                 <ul class="c-Carousel-list">
